--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-typescript": "^2.1.6",
     "typescript": "^5.6.3"
   }
 }
