--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.7",
     "@types/pg": "^8.11.10",
     "@types/sequelize": "^4.28.20",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
